Updates on the guide to install Portal